localhost/components/chartmuseum/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: chartmuseum
  namespace: chartmuseum
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`chartmuseum.<LOCAL_DNS>`)
    services:
    - name: chartmuseum
      port: 80
  tls:
    secretName: chartmuseum-tls
---
# todo: technical debt: https://github.com/kubefirst/kubefirst/issues/941
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirect-to-https
#  namespace: chartmuseum
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
